Express the last scroll offset in DIPs.

BUG=778228
Change-Id: Ic8da1fdbf821d0073fb2a22a75ecbc40441ce00e